--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Some title for site</title>
-	</head>
-	<body>
-	<header>
-		<img src="/img/RTRS_logo.png" alt="Logo RTRS">
-	</header>
-		{{{body}}}
-	</body>
+
+<head>
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="/js/script.js"></script>
+	<title>{{ title }}</title>
+</head>
+
+<body>
+	<div id="main">
+		<!--
+		<header>
+			<img class="logo" src="/img/RTRS_logo.png" alt="Logo RTRS">
+		</header>
+		-->
+		{{{ body }}}
+	</div>
+</body>
+
 </html>
