--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,17 +3,15 @@
 
 <head>
 	<link rel="stylesheet" href="/css/style.css">
-	<script src="/js/script.js"></script>
+	{{!-- <script src="/js/script.js"></script> --}}
 	<title>{{ title }}</title>
 </head>
 
 <body>
 	<div id="main">
-		<!--
-		<header>
+		{{!-- <header>
 			<img class="logo" src="/img/RTRS_logo.png" alt="Logo RTRS">
-		</header>
-		-->
+		</header> --}}
 		{{{ body }}}
 	</div>
 </body>
