--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,9 +5,9 @@
 	<div class="accordion">{{this}}</div>
 	<div class="panel">
 		<div class="flex-container">
-			{{{testHelpres 'Door is open'}}}
-			{{{testHelpres 'Fair'}}}
-			{{{testHelpres 'Netword error'}}}
+			{{{testHelpers 'Door is open'}}}
+			{{{testHelpers 'Fair'}}}
+			{{{testHelpers 'Network error'}}}
 		</div>
 	</div>
 	{{/each}}
