--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>List objects</h1>
+<h1>Состояние объектов Астраханского ОРТПЦ</h1>
 
 <div id="list_objects">
 	{{#each objects}}
@@ -8,8 +8,14 @@
 			{{{testHelpers 'Door is open'}}}
 			{{{testHelpers 'Fair'}}}
 			{{{testHelpers 'Network error'}}}
+			{{{testHelpers 'Door is open'}}}
+			{{{testHelpers 'Fair'}}}
+			{{{testHelpers 'Network error'}}}
+			{{{testHelpers 'Door is open'}}}
+			{{{testHelpers 'Fair'}}}
+			{{{testHelpers 'Network error'}}}						
 		</div>
 	</div>
 	{{/each}}
 </div>
-{{> socket}}
+{{> script}}
