--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,15 +5,42 @@
 	<div class="accordion">{{this}}</div>
 	<div class="panel">
 		<div class="flex-container">
-			{{{testHelpers 'Door is open'}}}
-			{{{testHelpers 'Fair'}}}
-			{{{testHelpers 'Network error'}}}
-			{{{testHelpers 'Door is open'}}}
-			{{{testHelpers 'Fair'}}}
-			{{{testHelpers 'Network error'}}}
-			{{{testHelpers 'Door is open'}}}
-			{{{testHelpers 'Fair'}}}
-			{{{testHelpers 'Network error'}}}						
+			<div>
+				<div>Door is open</div>
+				{{{testHelpers 'Door is open'}}}
+			</div>
+			<div>
+				<div>Fair</div>
+				{{{testHelpers 'Fair'}}}
+			</div>
+			<div>
+				<div>Network error</div>
+				{{{testHelpers 'Network error'}}}
+			</div>
+			<div>
+				<div>Door is open</div>
+				{{{testHelpers 'Door is open'}}}
+			</div>
+			<div>
+				<div>Fair</div>
+				{{{testHelpers 'Fair'}}}
+			</div>
+			<div>
+				<div>Network error</div>
+				{{{testHelpers 'Network error'}}}
+			</div>
+			<div>
+				<div>Door is open</div>
+				{{{testHelpers 'Door is open'}}}
+			</div>
+			<div>
+				<div>Fair</div>
+				{{{testHelpers 'Fair'}}}
+			</div>
+			<div>
+				<div>Network error</div>
+				{{{testHelpers 'Network error'}}}
+			</div>
 		</div>
 	</div>
 	{{/each}}
