--- a/views/graphics.handlebars
+++ b/views/graphics.handlebars
@@ -1,8 +1,8 @@
 <h1>{{ title }}</h1>
-<a href="/">Main page</a>
+<a href="/">Все объекты</a>
 <div id="list_graphics">
-	<button id="day">Chart for the day</button>
-	<button id="week">Chart for the week</button>
+	<button id="day">Графики за день</button>
+	<button id="week">Графики за неделю</button>
 	{{{graphics data}}}
 </div>
 {{> graphics}}
